     such hashmaps are added to allow source divers to add their own keymaps.
   - The message buffer is now a linked list, allowing for a dynamically sized
     buffer and some better underlying source code.
   - The USE_BLINK configuration option has been removed due to not having any
     effect.
   - The "change controls" key has been changed from F12 to '@' to keep it
     working in SDL.

  Added:
   - SDL support, with SDL being the default display method
   - Command line arguments have been added which allow the user to choose a
     display method at runtime
   - Multiple configurations which allow dub to build the program with or
     without curses or SDL support
   - A detailed help screen now appears when the user types '?'.  The previous
     "help" prompt new tells the user how to reach this screen.

VERSION 0.023
Finalized 2017-12-05 22:30 EST

  Fixed:
   - Fixed the missing semicolons that were preventing version 0.022 from
     compiling.

VERSION 0.022
Finalized 2017-12-05 21:45 EST

  With version 0.022, the source code was rewritten from C to D in order to
  unlock better functionality.  Unfortunately this broke support for PDCurses,
  rendering this version of the code unable to run on Windows.  An effort was
  made to fix this but due to a computer failure the code was lost.  Windows
  support has been temporarily postponed.

  Fixed:
   - Messages are now formatted properly and no longer consist of static
     strings.

  Changed:
   - The system the code is being compiled on now auto-detects and imports
     some modules according to what system "version" is being compiled.

VERSION 0.021
Finalized 2017-09-02 02:36 EST

Fixed:
 - Monsters are no longer rendered invisible if USE_FOV is undefined.

Changed:
 - Tiles are now defined as structs rather than abstract bitmaps.
 - Improvements to the operating system detection code.

Added:
 - Player now has an inventory made up of several body slots and can pick up
   items.